--- a/src/components/Card/card.component.html
+++ b/src/components/Card/card.component.html
@@ -1,5 +1,1 @@
-<div
-  class="w-36 flex flex-row flex-grow p-1 items-center content-center"
->
-  <img src="{{ pokemon?.images?.large }}" class="w-100" />
-</div>
+  <img class="h-full w-full" ngSrc="{{ pokemon?.images?.large }}" [width]="136" [height]="187" />
