--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,41 @@
 <style>
-  .backgroun-image {
+  .background-image {
     background-image: url("../assets/wallpaper.jpg");
-    background-size: 100%;
-    background-size: cover;
+    background-size: contain;
   }
 </style>
 
-<main class="w-100 h-screen backgroun-image">
-  <div class="w-100 h-screen flex flex-col items-center content-center">
-    <div
-      class="w-10/12 flex flex-col flex-grow items-center content-center"
-      style="height: 50vh"
+<main class="w-full h-full background-image">
+  <div class="w-full h-full flex flex-col items-center content-center">
+    <button
+      mat-raised-button
+      class="m-5"
+      style="background-color: #a1d7ff"
+      (click)="appChangeView('form')"
     >
-      <div class="w-full h-full flex flex-col items-center justify-center">
-        <div class="fixed top-0">
-          <button
-            mat-raised-button
-            class="m-1"
-            style="background-color: #ff3e49"
-            (click)="changeView('decks')"
-          >
-            Meus Baralhos
-          </button>
-          <button
-            mat-raised-button
-            class="m-1"
-            style="background-color: #a1d7ff"
-            (click)="changeView('form')"
-          >
-            Adicionar Baralho
-          </button>
-        </div>
-        <ng-template [ngIf]="view === 'form'">
-          <formdeck-component class="h-2/5" [pokemons]="pokemons" />
-        </ng-template>
-        <ng-template [ngIf]="view === 'decks'">
-          <decks-component />
-        </ng-template>
-      </div>
+      <mat-icon
+        aria-hidden="false"
+        style="color: #000;"
+        fontIcon="add"
+      ></mat-icon>
+      NOVO BARALHO
+    </button>
+    <div class="w-full h-full overflow-y-hidden">
+      <ng-template [ngIf]="view === 'form'">
+        <formdeck-component
+          class="w-full h-full flex items-center justify-center"
+          [pokemons]="pokemons"
+          viewMode="create"
+          (view)="appChangeView($event)"
+        />
+      </ng-template>
+      <ng-template [ngIf]="view === 'decks'">
+        <decks-component
+          (view)="appChangeView($event)"
+          [pokemons]="pokemons"
+          class="w-full max-h-full"
+        />
+      </ng-template>
     </div>
   </div>
 </main>
