--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; color: #fff; }
+html, body { height: 100vh; width: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; color: #fff; scrollbar-width: 5px; }
 /* width */
 ::-webkit-scrollbar {
     width: 5px;
